[package]
name = "sshare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sshare"

[dependencies]
eframe     = { version = "0.28", features = ["default"] }
egui       = "0.28"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1"
arboard    = "3"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
dirs       = "5"
mdns-sd    = "0.11"

[package.metadata.bundle]
name        = "SShare"
identifier  = "com.sshare.app"
category    = "Utilities"
short_description = "File and clipboard sharing between SSH-connected machines"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
